--- a/about.html
+++ b/about.html
@@ -100,11 +100,11 @@
         <img src="image/download.jpg" alt="Foto Andika">
       </div>
       <div class="about-text">
-        Nama saya Andika, siswa dari SMKN 1 Nglegok jurusan Teknik Komputer dan Jaringan. Saya tinggal di Ds. Sukosewu, RT 02/RW 06, Kecamatan Gandusari, Kabupaten Blitar.
+        My name is Andika, a student of SMKN 1 Nglegok majoring in Computer Engineering and Networking. I live in Ds. Sukosewu, RT 02/RW 06, Gandusari District, Blitar Regency.
         <br><br>
-        Saya telah mempelajari banyak hal seputar jaringan dan sistem komputer yang sangat bermanfaat untuk pengembangan diri saya di dunia teknologi informasi.
+        I have learned a lot about networks and computer systems which are very useful for my self-development in the world of information technology.
         <br><br>
-        Selama menempuh pendidikan di jurusan Teknik Komputer dan Jaringan, saya telah banyak mengenal beragam aspek teknologi informasi, mulai dari jaringan dasar hingga sistem komputer yang kompleks. Proses belajar ini memberi saya pengalaman yang menyenangkan
+        During my studies in Computer and Network Engineering, I have been exposed to various aspects of information technology, from basic networking to complex computer systems. This learning process has given me a pleasant experience.
       </div>      
     </div>
   </section>
