--- a/experience.html
+++ b/experience.html
@@ -134,8 +134,8 @@
         <img src="image/download.jpg" alt="Foto Andika">
       </div>
       <div class="experience-text">
-        <h3>Projeck Web Programing</h3>
-        <p>Nama saya <b>ANDIKA</b> siswa dari <b>SMKN 1 NGLEGOK</b> jurusan <b>Teknik Komputer dan Jaringan</b></p>
+        <h3>PNetwork Infrastructure Project</h3>
+        <p>Performing fiber optic cable splicing to repair a broken connection and installing fiber optic connectors, Configuring MikroTik routers to block access to specific websites, and Operating TP-Link devices to distribute internet access wirelessly.</p>
       </div>
     </div>
 
@@ -144,8 +144,8 @@
         <img src="image/download.jpg" alt="Foto Andika">
       </div>
       <div class="experience-text">
-        <h3>Projeck SYSAdmin</h3>
-        <p>Nama saya <b>ANDIKA</b> siswa dari <b>SMKN 1 NGLEGOK</b> jurusan <b>Teknik Komputer dan Jaringan</b></p>
+        <h3>Sysadmin Project</h3>
+        <p>Developing a dynamic website for an institution using the Moodle platform and deploy the website to a VPS server so that it can be accessed via the internet and Take a Red Hat course</p>
       </div>
     </div>
 
@@ -154,8 +154,8 @@
         <img src="image/download.jpg" alt="Foto Andika">
       </div>
       <div class="experience-text">
-        <h3>Projek Pemrograman Web</h3>
-        <p>Nama saya <b>ANDIKA</b> siswa dari <b>SMKN 1 NGLEGOK</b> jurusan <b>Teknik Komputer dan Jaringan</b></p>
+        <h3>Web Programming Project</h3>
+        <p>Participated in the creation of the e-commerce website of PT Dian Ayu which operates in the culinary sector, Create a portfolio website and Take a Always Ngoding course</p>
       </div>
     </div>
   </section>
