--- a/experience.html
+++ b/experience.html
@@ -134,7 +134,7 @@
         <img src="image/download.jpg" alt="Foto Andika">
       </div>
       <div class="experience-text">
-        <h3>PNetwork Infrastructure Project</h3>
+        <h3>Network Infrastructure Project</h3>
         <p>Performing fiber optic cable splicing to repair a broken connection and installing fiber optic connectors, Configuring MikroTik routers to block access to specific websites, and Operating TP-Link devices to distribute internet access wirelessly.</p>
       </div>
     </div>
