--- a/home.html
+++ b/home.html
@@ -27,7 +27,8 @@
       position: fixed;
       width: 100%;
       top: 0;
-      background-color: black;
+      background-color: #111;
+      border-bottom: 2px solid red;
       z-index: 10;
     }
 
@@ -101,6 +102,34 @@
       border-radius: 20px;
       object-fit: contain;
     }
+    footer {
+      background-color: #111;
+      color: white;
+      padding: 20px 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      z-index: 5;
+      gap: 25px;
+      font-size: 16px;
+      border-top: 2px solid red;
+    }
+
+    footer a {
+      color: white;
+      text-decoration: none;
+      transition: 0.3s;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    footer a:hover {
+      color: red;
+    }
   </style>
 </head>
 <body>
@@ -126,5 +155,19 @@
       <img src="image/ChatGPT_Image_23_Apr_2025__15.02.42-removebg-preview.png" alt="Anak SMA Melambaikan Tangan">
     </div>
   </main>
+  <footer>
+    <a href="https://wa.me/6281234567890" target="_blank">
+      <img src="image/whatsapp.png" alt="WhatsApp" width="20"> WhatsApp
+    </a>
+    <a href="mailto:andika@example.com" target="_blank">
+      <img src="image/email.png" alt="Email" width="20"> Email
+    </a>
+    <a href="https://linkedin.com/in/andika" target="_blank">
+      <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
+    </a>
+    <a href="https://instagram.com/andika" target="_blank">
+      <img src="image/instagram.png" alt="Instagram" width="20"> Instagram
+    </a>
+  </footer>
 </body>
 </html>
