--- a/experience.html
+++ b/experience.html
@@ -27,7 +27,8 @@
       position: fixed;
       width: 100%;
       top: 0;
-      background-color: black;
+      background-color: #111;
+      border-bottom: 2px solid red;
       z-index: 10;
     }
 
