--- a/sertificate.html
+++ b/sertificate.html
@@ -23,7 +23,8 @@
       justify-content: space-between;
       align-items: center;
       padding: 25px 50px;
-      background-color: black;
+      background-color: #111;
+      border-bottom:2px solid red;
       position: fixed;
       top: 0;
       width: 100%;
@@ -93,6 +94,32 @@
       .sertifikat-container {
         flex-direction: column;
         align-items: center;
+      }
+      footer {
+        background-color: #111;
+        color: white;
+        padding: 20px 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        z-index: 5;
+        gap: 25px;
+        font-size: 16px;
+        border-top: 2px solid red;
+      }
+      footer a {
+        color: white;
+        text-decoration: none;
+        transition: 0.3s;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+      footer a:hover {
+        color: red;
       }
     }
   </style>
@@ -166,6 +193,19 @@
       </a>
     </div>
   </section>
-
+  <footer>
+    <a href="https://wa.me/6281234567890" target="_blank">
+      <img src="image/whatsapp.png" alt="WhatsApp" width="20"> WhatsApp
+    </a>
+    <a href="mailto:andika@example.com" target="_blank">
+      <img src="image/email.png" alt="Email" width="20"> Email
+    </a>
+    <a href="https://linkedin.com/in/andika" target="_blank">
+      <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
+    </a>
+    <a href="https://instagram.com/andika" target="_blank">
+      <img src="image/instagram.png" alt="Instagram" width="20"> Instagram
+    </a>
+  </footer>
 </body>
 </html>
