--- a/experience.html
+++ b/experience.html
@@ -189,16 +189,16 @@
   </section>
   <footer>
     <a href="https://wa.me/6281234567890" target="_blank">
-      <img src="image/whatsapp.png" alt="WhatsApp" width="20"> WhatsApp
+      <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
     </a>
     <a href="mailto:andika@example.com" target="_blank">
-      <img src="image/email.png" alt="Email" width="20"> Email
+      <img src="image/Email.png" alt="Email" width="20"> Email
     </a>
     <a href="https://linkedin.com/in/andika" target="_blank">
       <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
     </a>
     <a href="https://instagram.com/andika" target="_blank">
-      <img src="image/instagram.png" alt="Instagram" width="20"> Instagram
+      <img src="image/ig.png" alt="Instagram" width="20"> Instagram
     </a>
   </footer>
 </body>
