--- a/skill.html
+++ b/skill.html
@@ -84,7 +84,6 @@
       height: 100px;
       border-radius: 50%;
       border: 5px solid red;
-      background-color: red;
       object-fit: cover;
     }
 
@@ -159,7 +158,7 @@
     <div class="skills-container">
       <!-- Skill 1 -->
       <div class="skill-card">
-        <img src="image/download.jpg" alt="Andika Linux" class="skill-image">
+        <img src="image/debian.png" alt="Andika Linux" class="skill-image">
         <h3 class="skill-title">Linux Debian</h3>
         <ul class="skill-list">
           <li>Mengelola server Debian</li>
@@ -171,7 +170,7 @@
 
       <!-- Skill 2 -->
       <div class="skill-card">
-        <img src="image/download.jpg" alt="Andika Mikrotik" class="skill-image">
+        <img src="image/mikrotik.png" alt="Andika Mikrotik" class="skill-image">
         <h3 class="skill-title">Mikrotik</h3>
         <ul class="skill-list">
           <li>Konfigurasi routing dan bridge</li>
@@ -183,7 +182,7 @@
 
       <!-- Skill 3 -->
       <div class="skill-card">
-        <img src="image/download.jpg" alt="Andika Web" class="skill-image">
+        <img src="image/pweb.png" alt="Andika Web" class="skill-image">
         <h3 class="skill-title">Web Development</h3>
         <ul class="skill-list">
           <li>HTML & CSS</li>
@@ -195,16 +194,16 @@
     </div>
   </section>
   <footer>
-  <a href="https://wa.me/6281234567890" target="_blank">
+  <a href="https://wa.me/6282257006740" target="_blank">
     <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
   </a>
-  <a href="mailto:andika@example.com" target="_blank">
+  <a href="mailto:andika23580@gmail.com" target="_blank">
     <img src="image/Email.png" alt="Email" width="20"> Email
   </a>
-  <a href="https://linkedin.com/in/andika" target="_blank">
+  <a href="https://linkedin.com/in/ANDIKA." target="_blank">
     <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
   </a>
-  <a href="https://instagram.com/andika" target="_blank">
+  <a href="https://instagram.com/_kaa_aja" target="_blank">
     <img src="image/ig.png" alt="Instagram" width="20"> Instagram
   </a>
 </footer>
