--- a/sertificate.html
+++ b/sertificate.html
@@ -144,51 +144,39 @@
       <!-- Sertifikat 1-12 -->
       <a href="sertifikat/sertifikat1.pdf" target="_blank" class="sertifikat-card">
         <img src="image/download.jpg" alt="Sertifikat 1" class="sertifikat-image">
-        <div class="sertifikat-title">Linux Debian</div>
+        <div class="sertifikat-title">HTML | Always Ngoding</div>
       </a>
       <a href="sertifikat/sertifikat2.pdf" target="_blank" class="sertifikat-card">
         <img src="image/download.jpg" alt="Sertifikat 2" class="sertifikat-image">
-        <div class="sertifikat-title">Mikrotik Dasar</div>
+        <div class="sertifikat-title">CSS | Always Ngoding</div>
       </a>
       <a href="sertifikat/sertifikat3.pdf" target="_blank" class="sertifikat-card">
         <img src="image/download.jpg" alt="Sertifikat 3" class="sertifikat-image">
-        <div class="sertifikat-title">Web Development</div>
+        <div class="sertifikat-title">PHP | Always Ngoding</div>
       </a>
       <a href="sertifikat/sertifikat4.pdf" target="_blank" class="sertifikat-card">
         <img src="image/download.jpg" alt="Sertifikat 4" class="sertifikat-image">
-        <div class="sertifikat-title">Cisco Packet Tracer</div>
+        <div class="sertifikat-title">Java Script | Always Ngoding</div>
       </a>
       <a href="sertifikat/sertifikat5.pdf" target="_blank" class="sertifikat-card">
         <img src="image/download.jpg" alt="Sertifikat 5" class="sertifikat-image">
-        <div class="sertifikat-title">HTML & CSS</div>
+        <div class="sertifikat-title">Fortinet Certified Fundamentals in Cybersecurity | Fortinet</div>
       </a>
       <a href="sertifikat/sertifikat6.pdf" target="_blank" class="sertifikat-card">
         <img src="image/download.jpg" alt="Sertifikat 6" class="sertifikat-image">
-        <div class="sertifikat-title">Python Dasar</div>
+        <div class="sertifikat-title">Career Essentials in Generative Al by Microsoft and Linkedln | Microsoft and Linkedln</div>
       </a>
       <a href="sertifikat/sertifikat7.pdf" target="_blank" class="sertifikat-card">
         <img src="image/download.jpg" alt="Sertifikat 7" class="sertifikat-image">
-        <div class="sertifikat-title">Database MySQL</div>
+        <div class="sertifikat-title">Generative Al for Student training by Microsoft | Microsoft</div>
       </a>
-      <a href="sertifikat/sertifikat8.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 8" class="sertifikat-image">
-        <div class="sertifikat-title">Pemrograman Java</div>
+      <a href="sertifikat/sertifikat7.pdf" target="_blank" class="sertifikat-card">
+        <img src="image/download.jpg" alt="Sertifikat 7" class="sertifikat-image">
+        <div class="sertifikat-title">Red Hat System Administration I (RH124 - RHA) - Ver. 9.3 | Red Hat Academy</div>
       </a>
-      <a href="sertifikat/sertifikat9.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 9" class="sertifikat-image">
-        <div class="sertifikat-title">Cyber Security Dasar</div>
-      </a>
-      <a href="sertifikat/sertifikat10.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 10" class="sertifikat-image">
-        <div class="sertifikat-title">Cloud Computing</div>
-      </a>
-      <a href="sertifikat/sertifikat11.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 11" class="sertifikat-image">
-        <div class="sertifikat-title">UI/UX Design</div>
-      </a>
-      <a href="sertifikat/sertifikat12.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 12" class="sertifikat-image">
-        <div class="sertifikat-title">Networking Lanjut</div>
+      <a href="sertifikat/sertifikat7.pdf" target="_blank" class="sertifikat-card">
+        <img src="image/download.jpg" alt="Sertifikat 7" class="sertifikat-image">
+        <div class="sertifikat-title">Red Hat Training: Getting Started with Linux it Training: Getting Fundamentals (RH104 - RHA) - Ver. 9.1 | Red Hat Academy</div>
       </a>
     </div>
   </section>
