--- a/skill.html
+++ b/skill.html
@@ -84,7 +84,8 @@
       height: 100px;
       border-radius: 50%;
       border: 5px solid red;
-      object-fit: cover;
+      object-fit: contain;
+      background-color: white;
     }
 
     .skill-title {
