--- a/about.html
+++ b/about.html
@@ -136,16 +136,16 @@
     </div>
   </section>
   <footer>
-  <a href="https://wa.me/6281234567890" target="_blank">
+  <a href="https://wa.me/6282257006740" target="_blank">
     <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
   </a>
-  <a href="mailto:andika@example.com" target="_blank">
+  <a href="mailto:andika23580@gmail.com" target="_blank">
     <img src="image/Email.png" alt="Email" width="20"> Email
   </a>
-  <a href="https://linkedin.com/in/andika" target="_blank">
+  <a href="www.linkedin.com/in/andika-58905a28a" target="_blank">
     <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
   </a>
-  <a href="https://instagram.com/andika" target="_blank">
+  <a href="https://www.instagram.com/_kaa_aja?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
     <img src="image/ig.png" alt="Instagram" width="20"> Instagram
   </a>
 </footer>
