--- a/skill.html
+++ b/skill.html
@@ -85,7 +85,7 @@
       border-radius: 50%;
       border: 5px solid red;
       object-fit: contain;
-      background-color: red;
+      background-color: #111;
     }
 
     .skill-title {
