--- a/skill.html
+++ b/skill.html
@@ -171,7 +171,7 @@
 
       <!-- Skill 2 -->
       <div class="skill-card">
-        <img src="image/mikrotik.png" alt="Andika Mikrotik" class="skill-image">
+        <img src="image/Screenshot_6.png" alt="Andika Mikrotik" class="skill-image">
         <h3 class="skill-title">Mikrotik</h3>
         <ul class="skill-list">
           <li>Konfigurasi routing dan bridge</li>
