--- a/home.html
+++ b/home.html
@@ -159,7 +159,7 @@
     <a href="https://wa.me/6282257006740" target="_blank">
       <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
     </a>
-    <a href="andika23580@gmail.com" target="_blank">
+    <a href="mailto:andika23580@gmail.com" target="_blank">
       <img src="image/Email.png" alt="Email" width="20"> Email
     </a>
     <a href="www.linkedin.com/in/andika-58905a28a" target="_blank">
