--- a/sertificate.html
+++ b/sertificate.html
@@ -13,7 +13,7 @@
     }
 
     body {
-      background-color: black;
+      background-color: #0f0f0f;
       color: white;
       min-height: 100vh;
     }
@@ -24,7 +24,7 @@
       align-items: center;
       padding: 25px 50px;
       background-color: #111;
-      border-bottom:2px solid red;
+      border-bottom: 2px solid red;
       position: fixed;
       top: 0;
       width: 100%;
@@ -49,79 +49,90 @@
     }
 
     .sertifikat-section {
-      padding: 150px 50px 100px;
+      padding: 150px 20px 100px;
       text-align: center;
+    }
+
+    .sertifikat-section h2 {
+      font-size: 32px;
+      margin-bottom: 40px;
+      color: white;
     }
 
     .sertifikat-container {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
     }
 
-    .sertifikat-card {
-      background-color: #8b0000;
+    .sertifikat-box {
+      background: linear-gradient(135deg, #8e2de2, #4a00e0);
+      padding: 20px 30px;
       border-radius: 15px;
-      width: 200px;
-      padding: 10px;
-      overflow: hidden;
-      transition: transform 0.3s ease;
-      text-align: center;
-    }
-
-    .sertifikat-card:hover {
-      transform: translateY(-10px);
-    }
-
-    .sertifikat-image {
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 10px;
-      margin-bottom: 10px;
-      border: 2px solid white;
-    }
-
-    .sertifikat-title {
-      font-size: 16px;
-      font-weight: bold;
+      width: 80%;
+      max-width: 600px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
       color: white;
+      transition: transform 0.3s ease;
+      text-align: left;
+      text-decoration: none;
+    }
+
+    .sertifikat-box:hover {
+      transform: scale(1.03);
+    }
+
+    .sertifikat-box h3 {
       margin-bottom: 10px;
+      font-size: 20px;
+      font-weight: bold;
+    }
+
+    .sertifikat-box p {
+      font-size: 15px;
+      opacity: 0.9;
+    }
+
+    footer {
+      background-color: #111;
+      color: white;
+      padding: 20px 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      z-index: 5;
+      gap: 25px;
+      font-size: 16px;
+      border-top: 2px solid red;
+    }
+
+    footer a {
+      color: white;
+      text-decoration: none;
+      transition: 0.3s;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    footer a:hover {
+      color: red;
     }
 
     @media (max-width: 768px) {
-      .sertifikat-container {
-        flex-direction: column;
-        align-items: center;
+      .sertifikat-box {
+        width: 90%;
+      }
+
+      nav a {
+        margin-left: 15px;
+        font-size: 14px;
       }
     }
-          footer {
-        background-color: #111;
-        color: white;
-        padding: 20px 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        z-index: 5;
-        gap: 25px;
-        font-size: 16px;
-        border-top: 2px solid red;
-      }
-      footer a {
-        color: white;
-        text-decoration: none;
-        transition: 0.3s;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-      }
-      footer a:hover {
-        color: red;
-      }
   </style>
 </head>
 <body>
@@ -138,48 +149,31 @@
   </header>
 
   <section class="sertifikat-section">
+    <h2>Certificates</h2>
     <div class="sertifikat-container">
-      <!-- Loop 12 Sertifikat -->
-      <!-- Ganti nama file gambar dan PDF sesuai file kamu -->
-      <!-- Sertifikat 1-12 -->
-      <a href="sertifikat/sertifikat1.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 1" class="sertifikat-image">
-        <div class="sertifikat-title">HTML | Always Ngoding</div>
+      <a href="sertifikat/sertifikat1.pdf" target="_blank" class="sertifikat-box">
+        <h3>Front-End Web Developer - FreeCodeCamp</h3>
+        <p>Completed full course in responsive web design and JavaScript algorithms.</p>
       </a>
-      <a href="sertifikat/sertifikat2.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 2" class="sertifikat-image">
-        <div class="sertifikat-title">CSS | Always Ngoding</div>
+      <a href="sertifikat/sertifikat2.pdf" target="_blank" class="sertifikat-box">
+        <h3>JavaScript Algorithms and Data Structures - Coursera</h3>
+        <p>In-depth training on ES6, asynchronous JS, and algorithm complexity.</p>
       </a>
-      <a href="sertifikat/sertifikat3.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 3" class="sertifikat-image">
-        <div class="sertifikat-title">PHP | Always Ngoding</div>
+      <a href="sertifikat/sertifikat3.pdf" target="_blank" class="sertifikat-box">
+        <h3>React - Codecademy</h3>
+        <p>Explored React fundamentals, hooks, and routing.</p>
       </a>
-      <a href="sertifikat/sertifikat4.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 4" class="sertifikat-image">
-        <div class="sertifikat-title">Java Script | Always Ngoding</div>
+      <a href="sertifikat/sertifikat4.pdf" target="_blank" class="sertifikat-box">
+        <h3>HTML | Always Ngoding</h3>
+        <p>Pengenalan dasar HTML dan struktur elemen-elemen web.</p>
       </a>
-      <a href="sertifikat/sertifikat5.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 5" class="sertifikat-image">
-        <div class="sertifikat-title">Fortinet Certified Fundamentals in Cybersecurity | Fortinet</div>
-      </a>
-      <a href="sertifikat/sertifikat6.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 6" class="sertifikat-image">
-        <div class="sertifikat-title">Career Essentials in Generative Al by Microsoft and Linkedln | Microsoft and Linkedln</div>
-      </a>
-      <a href="sertifikat/sertifikat7.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 7" class="sertifikat-image">
-        <div class="sertifikat-title">Generative Al for Student training by Microsoft | Microsoft</div>
-      </a>
-      <a href="sertifikat/sertifikat7.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 7" class="sertifikat-image">
-        <div class="sertifikat-title">Red Hat System Administration I (RH124 - RHA) - Ver. 9.3 | Red Hat Academy</div>
-      </a>
-      <a href="sertifikat/sertifikat7.pdf" target="_blank" class="sertifikat-card">
-        <img src="image/download.jpg" alt="Sertifikat 7" class="sertifikat-image">
-        <div class="sertifikat-title">Red Hat Training: Getting Started with Linux it Training: Getting Fundamentals (RH104 - RHA) - Ver. 9.1 | Red Hat Academy</div>
+      <a href="sertifikat/sertifikat5.pdf" target="_blank" class="sertifikat-box">
+        <h3>Fortinet Certified Fundamentals in Cybersecurity</h3>
+        <p>Dasar-dasar keamanan jaringan dan proteksi ancaman siber.</p>
       </a>
     </div>
   </section>
+
   <footer>
     <a href="https://wa.me/6282257006740" target="_blank">
       <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
@@ -187,12 +181,13 @@
     <a href="mailto:andika23580@gmail.com" target="_blank">
       <img src="image/Email.png" alt="Email" width="20"> Email
     </a>
-    <a href="www.linkedin.com/in/andika-58905a28a" target="_blank">
+    <a href="https://www.linkedin.com/in/andika-58905a28a" target="_blank">
       <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
     </a>
-    <a href="https://www.instagram.com/_kaa_aja?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+    <a href="https://www.instagram.com/_kaa_aja" target="_blank">
       <img src="image/ig.png" alt="Instagram" width="20"> Instagram
     </a>
   </footer>
+
 </body>
 </html>
