--- a/sertificate.html
+++ b/sertificate.html
@@ -67,7 +67,7 @@
     }
 
     .sertifikat-box {
-      background: linear-gradient(135deg, #8e2de2, #4a00e0);
+      background: linear-gradient(135deg, #e52d27, #b31217); /* MERAH GRADASI */
       padding: 20px 30px;
       border-radius: 15px;
       width: 80%;
@@ -151,25 +151,53 @@
   <section class="sertifikat-section">
     <h2>Certificates</h2>
     <div class="sertifikat-container">
-      <a href="sertifikat/sertifikat1.pdf" target="_blank" class="sertifikat-box">
-        <h3>Front-End Web Developer - FreeCodeCamp</h3>
-        <p>Completed full course in responsive web design and JavaScript algorithms.</p>
+      <a href="sertifikat/generative1.pdf" target="_blank" class="sertifikat-box">
+        <h3>Generative AI for Student Training by Microsoft</h3>
+        <p>Training in generative AI principles and applications for students.</p>
       </a>
-      <a href="sertifikat/sertifikat2.pdf" target="_blank" class="sertifikat-box">
-        <h3>JavaScript Algorithms and Data Structures - Coursera</h3>
-        <p>In-depth training on ES6, asynchronous JS, and algorithm complexity.</p>
+      <a href="sertifikat/generative2.pdf" target="_blank" class="sertifikat-box">
+        <h3>Career Essentials in Generative AI by Microsoft and LinkedIn</h3>
+        <p>Essential skills and career paths in AI, powered by Microsoft and LinkedIn.</p>
       </a>
-      <a href="sertifikat/sertifikat3.pdf" target="_blank" class="sertifikat-box">
-        <h3>React - Codecademy</h3>
-        <p>Explored React fundamentals, hooks, and routing.</p>
+      <a href="sertifikat/fcf1.pdf" target="_blank" class="sertifikat-box">
+        <h3>FCF - Getting Started in Cybersecurity 2.0</h3>
+        <p>Introduction to the basics of cybersecurity fundamentals.</p>
       </a>
-      <a href="sertifikat/sertifikat4.pdf" target="_blank" class="sertifikat-box">
-        <h3>HTML | Always Ngoding</h3>
-        <p>Pengenalan dasar HTML dan struktur elemen-elemen web.</p>
+      <a href="sertifikat/fcf2.pdf" target="_blank" class="sertifikat-box">
+        <h3>FCF - Technical Introduction to Cybersecurity 1.0</h3>
+        <p>Technical overview of network security and cybersecurity roles.</p>
       </a>
-      <a href="sertifikat/sertifikat5.pdf" target="_blank" class="sertifikat-box">
+      <a href="sertifikat/fcf3.pdf" target="_blank" class="sertifikat-box">
+        <h3>FCF - Introduction to the Threat Landscape 2.0</h3>
+        <p>Understanding current cybersecurity threats and risks.</p>
+      </a>
+      <a href="sertifikat/fortinet.pdf" target="_blank" class="sertifikat-box">
         <h3>Fortinet Certified Fundamentals in Cybersecurity</h3>
-        <p>Dasar-dasar keamanan jaringan dan proteksi ancaman siber.</p>
+        <p>Cybersecurity basics certification from Fortinet.</p>
+      </a>
+      <a href="sertifikat/redhat1.pdf" target="_blank" class="sertifikat-box">
+        <h3>Red Hat System Administration I (RH124 - RHA) - Ver. 9.3</h3>
+        <p>System admin training using Red Hat Enterprise Linux version 9.3.</p>
+      </a>
+      <a href="sertifikat/redhat2.pdf" target="_blank" class="sertifikat-box">
+        <h3>Getting Started with Linux Fundamentals (RH104 - RHA) - Ver. 9.1</h3>
+        <p>Foundational training on Linux and command-line operations.</p>
+      </a>
+      <a href="sertifikat/css.pdf" target="_blank" class="sertifikat-box">
+        <h3>CSS - Always Ngoding</h3>
+        <p>Pemahaman dasar tentang CSS untuk styling halaman web.</p>
+      </a>
+      <a href="sertifikat/html.pdf" target="_blank" class="sertifikat-box">
+        <h3>HTML - Always Ngoding</h3>
+        <p>Pengenalan elemen HTML dan struktur halaman web.</p>
+      </a>
+      <a href="sertifikat/js.pdf" target="_blank" class="sertifikat-box">
+        <h3>JavaScript - Always Ngoding</h3>
+        <p>Dasar JavaScript dan interaktivitas halaman web.</p>
+      </a>
+      <a href="sertifikat/php.pdf" target="_blank" class="sertifikat-box">
+        <h3>PHP - Always Ngoding</h3>
+        <p>Pengenalan sintaks dan pemrograman backend dengan PHP.</p>
       </a>
     </div>
   </section>
