--- a/experience.html
+++ b/experience.html
@@ -159,7 +159,7 @@
   <section class="experience-section">
     <div class="experience-container">
       <div class="experience-image">
-        <img src="image/download.jpg" alt="Foto Andika">
+        <img src="image/infra.png" alt="Foto Andika">
       </div>
       <div class="experience-text">
         <h3>Network Infrastructure Project</h3>
@@ -169,7 +169,7 @@
 
     <div class="experience-container reverse">
       <div class="experience-image">
-        <img src="image/download.jpg" alt="Foto Andika">
+        <img src="image/sys.png" alt="Foto Andika">
       </div>
       <div class="experience-text">
         <h3>Sysadmin Project</h3>
@@ -179,7 +179,7 @@
 
     <div class="experience-container">
       <div class="experience-image">
-        <img src="image/download.jpg" alt="Foto Andika">
+        <img src="image/pweb.png" alt="Foto Andika">
       </div>
       <div class="experience-text">
         <h3>Web Programming Project</h3>
