--- a/skill.html
+++ b/skill.html
@@ -183,12 +183,11 @@
 
       <!-- Skill 3 -->
       <div class="skill-card">
-        <img src="image/pweb.png" alt="Andika Web" class="skill-image">
+        <img src="image/web.png" alt="Andika Web" class="skill-image">
         <h3 class="skill-title">Web Development</h3>
         <ul class="skill-list">
           <li>HTML & CSS</li>
-          <li>Layout responsif dan rapi</li>
-          <li>Desain UI sederhana</li>
+          <li>Layout yang rapi</li>
           <li>Dasar JavaScript untuk interaksi</li>
         </ul>
       </div>
