--- a/experience.html
+++ b/experience.html
@@ -159,7 +159,7 @@
   <section class="experience-section">
     <div class="experience-container">
       <div class="experience-image">
-        <img src="image/infra.png" alt="Foto Andika">
+        <img src="image/infra1.png" alt="Foto Andika">
       </div>
       <div class="experience-text">
         <h3>Network Infrastructure Project</h3>
