--- a/sertificate.html
+++ b/sertificate.html
@@ -13,7 +13,7 @@
     }
 
     body {
-      background-color: #0f0f0f;
+      background-color: #000000; /* Warna hitam solid */
       color: white;
       min-height: 100vh;
     }
@@ -144,7 +144,7 @@
       <a href="about.html">ABOUT</a>
       <a href="experience.html">EXPERIENCE</a>
       <a href="skill.html">SKILL</a>
-      <a href="sertifikat.html">SERTIFICATE</a>
+      <a href="sertificate.html">SERTIFICATE</a>
     </nav>
   </header>
 
