--- a/sertificate.html
+++ b/sertificate.html
@@ -151,51 +151,51 @@
   <section class="sertifikat-section">
     <h2>Certificates</h2>
     <div class="sertifikat-container">
-      <a href="sertifikat/generative1.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1tGsmNs0Tvv7yVpPHviXDTcFy0fo8AksV/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>Generative AI for Student Training by Microsoft</h3>
         <p>Training in generative AI principles and applications for students.</p>
       </a>
-      <a href="sertifikat/generative2.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1UFWUXQQa-gK7852_mJa-G0C60W_tBIaQ/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>Career Essentials in Generative AI by Microsoft and LinkedIn</h3>
         <p>Essential skills and career paths in AI, powered by Microsoft and LinkedIn.</p>
       </a>
-      <a href="sertifikat/fcf1.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1IxY1r8zkgpqxeUUSjcMhwFV4EcivD_A5/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>FCF - Getting Started in Cybersecurity 2.0</h3>
         <p>Introduction to the basics of cybersecurity fundamentals.</p>
       </a>
-      <a href="sertifikat/fcf2.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1qSGPS_MAsTeY2RbQ1PIqjd9t4R3sT_lx/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>FCF - Technical Introduction to Cybersecurity 1.0</h3>
         <p>Technical overview of network security and cybersecurity roles.</p>
       </a>
-      <a href="sertifikat/fcf3.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1mF4ptrLJuF71mL-1YSvUWNPl6Z4tH9WH/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>FCF - Introduction to the Threat Landscape 2.0</h3>
         <p>Understanding current cybersecurity threats and risks.</p>
       </a>
-      <a href="sertifikat/fortinet.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1U9SXfJBYhngx0VtkzUy2_KrzrTw8Gpq7/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>Fortinet Certified Fundamentals in Cybersecurity</h3>
         <p>Cybersecurity basics certification from Fortinet.</p>
       </a>
-      <a href="sertifikat/redhat1.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1Ru439E5q8KdsbMOQnXwq8QGR8KXVdjoT/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>Red Hat System Administration I (RH124 - RHA) - Ver. 9.3</h3>
         <p>System admin training using Red Hat Enterprise Linux version 9.3.</p>
       </a>
-      <a href="sertifikat/redhat2.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1EplGwb9HA47kW9ybrw-q_5YIZGCakfrC/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>Getting Started with Linux Fundamentals (RH104 - RHA) - Ver. 9.1</h3>
         <p>Foundational training on Linux and command-line operations.</p>
       </a>
-      <a href="sertifikat/css.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1fIyJy264JpoDoOWbJdYN76dT9JfDRxTp/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>CSS - Always Ngoding</h3>
         <p>Pemahaman dasar tentang CSS untuk styling halaman web.</p>
       </a>
-      <a href="sertifikat/html.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/10cSvYM6vNXZyqIaQBECOMxrDFu5ZSb5W/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>HTML - Always Ngoding</h3>
         <p>Pengenalan elemen HTML dan struktur halaman web.</p>
       </a>
-      <a href="sertifikat/js.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1Li4YIYzr27c2uxsHVTtfvYsOjysDPceD/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>JavaScript - Always Ngoding</h3>
         <p>Dasar JavaScript dan interaktivitas halaman web.</p>
       </a>
-      <a href="sertifikat/php.pdf" target="_blank" class="sertifikat-box">
+      <a href="https://drive.google.com/file/d/1jbng8SPiCbFne_A9WjE2HNxKY29DuSbc/view?usp=sharing" target="_blank" class="sertifikat-box">
         <h3>PHP - Always Ngoding</h3>
         <p>Pengenalan sintaks dan pemrograman backend dengan PHP.</p>
       </a>
