--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
   <section class="about-section">
     <div class="about-container">
       <div class="about-image">
-        <img src="image/download.jpg" alt="Foto Andika">
+        <img src="image/andika.jpg" alt="Foto Andika">
       </div>
       <div class="about-text">
         My name is Andika, a student of SMKN 1 Nglegok majoring in Computer Engineering and Networking. I live in Ds. Sukosewu, RT 02/RW 06, Gandusari District, Blitar Regency.
