--- a/home.html
+++ b/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Andika Portfolio</title>
   <style>
     * {
@@ -15,7 +15,6 @@
     body {
       background-color: black;
       color: white;
-      height: 100vh;
       overflow-x: hidden;
     }
 
@@ -23,13 +22,19 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 25px 50px;
+      padding: 20px 40px;
       position: fixed;
       width: 100%;
       top: 0;
       background-color: #111;
       border-bottom: 2px solid red;
       z-index: 10;
+      animation: slideDown 1s ease-out;
+    }
+
+    @keyframes slideDown {
+      from { transform: translateY(-100%); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
 
     .logo {
@@ -38,7 +43,7 @@
     }
 
     nav a {
-      margin-left: 30px;
+      margin-left: 20px;
       text-decoration: none;
       color: white;
       font-weight: 600;
@@ -51,16 +56,17 @@
 
     main {
       display: flex;
-      justify-content: space-between;
+      flex-wrap: wrap;
+      justify-content: center;
       align-items: center;
-      padding: 150px 100px 0;
-      height: 100vh;
+      padding: 140px 20px 80px;
+      min-height: 100vh;
+      gap: 40px;
     }
 
     .intro {
-      max-width: 50%;
-      padding-right: 30px;
-      margin-left: 150px;
+      max-width: 500px;
+      animation: fadeInLeft 1.5s ease;
     }
 
     .intro h3 {
@@ -92,31 +98,30 @@
     .hero-img {
       flex: 1;
       display: flex;
-      justify-content: flex-end;
-      align-items: flex-end;
-      height: 100%;
+      justify-content: center;
+      align-items: center;
+      animation: fadeInZoom 2s ease;
     }
 
     .hero-img img {
-      height: 80vh;
+      max-height: 400px;
       width: auto;
       border-radius: 20px;
       object-fit: contain;
     }
+
     footer {
       background-color: #111;
       color: white;
-      padding: 20px 50px;
+      padding: 15px 30px;
       display: flex;
       justify-content: center;
       align-items: center;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      z-index: 5;
-      gap: 25px;
+      flex-wrap: wrap;
+      gap: 20px;
       font-size: 16px;
       border-top: 2px solid red;
+      animation: slideUp 1s ease-out;
     }
 
     footer a {
@@ -130,6 +135,64 @@
 
     footer a:hover {
       color: red;
+    }
+
+    /* Animations */
+    @keyframes fadeInLeft {
+      from { transform: translateX(-50px); opacity: 0; }
+      to { transform: translateX(0); opacity: 1; }
+    }
+
+    @keyframes fadeInZoom {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
+    @keyframes slideUp {
+      from { transform: translateY(100%); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    /* Responsiveness */
+    @media (max-width: 768px) {
+      header, footer {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 15px;
+      }
+
+      nav {
+        margin-top: 10px;
+      }
+
+      nav a {
+        margin-left: 0;
+        margin-right: 15px;
+      }
+
+      main {
+        padding: 120px 20px 60px;
+        flex-direction: column;
+      }
+
+      .intro {
+        margin: 0;
+        text-align: center;
+      }
+
+      .hero-img {
+        justify-content: center;
+      }
+
+      .hero-img img {
+        max-width: 100%;
+        height: auto;
+      }
+
+      footer {
+        justify-content: center;
+        text-align: center;
+      }
     }
   </style>
 </head>
@@ -155,6 +218,7 @@
       <img src="image/ChatGPT_Image_23_Apr_2025__15.02.42-removebg-preview.png" alt="Anak SMA Melambaikan Tangan">
     </div>
   </main>
+
   <footer>
     <a href="https://wa.me/6282257006740" target="_blank">
       <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
@@ -162,12 +226,11 @@
     <a href="mailto:andika23580@gmail.com" target="_blank">
       <img src="image/Email.png" alt="Email" width="20"> Email
     </a>
-    <a href="www.linkedin.com/in/andika-58905a28a" target="_blank">
+    <a href="https://www.linkedin.com/in/andika-58905a28a" target="_blank">
       <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
     </a>
     <a href="https://www.instagram.com/_kaa_aja?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
       <img src="image/ig.png" alt="Instagram" width="20"> Instagram
-    </a>
     </a>
   </footer>
 </body>
