--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
     body {
       background-color: black;
       color: white;
+      min-height: 100vh;
       overflow-x: hidden;
     }
 
@@ -22,19 +23,14 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 40px;
+      padding: 20px 30px;
       position: fixed;
       width: 100%;
       top: 0;
       background-color: #111;
       border-bottom: 2px solid red;
       z-index: 10;
-      animation: slideDown 1s ease-out;
-    }
-
-    @keyframes slideDown {
-      from { transform: translateY(-100%); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
+      animation: slideDown 1s ease-in-out;
     }
 
     .logo {
@@ -56,17 +52,17 @@
 
     main {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      flex-direction: row;
+      justify-content: space-between;
       align-items: center;
-      padding: 140px 20px 80px;
-      min-height: 100vh;
-      gap: 40px;
+      padding: 130px 50px 80px;
+      gap: 30px;
+      flex-wrap: wrap;
     }
 
     .intro {
-      max-width: 500px;
-      animation: fadeInLeft 1.5s ease;
+      flex: 1 1 300px;
+      animation: fadeInLeft 1.5s ease-in-out;
     }
 
     .intro h3 {
@@ -75,7 +71,7 @@
     }
 
     .intro h1 {
-      font-size: 40px;
+      font-size: 36px;
       font-weight: bold;
     }
 
@@ -89,6 +85,7 @@
       font-weight: bold;
       border-radius: 10px;
       transition: 0.3s;
+      animation: fadeIn 2s ease-in-out;
     }
 
     .btn-kenalan:hover {
@@ -96,16 +93,17 @@
     }
 
     .hero-img {
-      flex: 1;
+      flex: 1 1 300px;
       display: flex;
       justify-content: center;
       align-items: center;
-      animation: fadeInZoom 2s ease;
+      animation: zoomIn 2s ease;
     }
 
     .hero-img img {
-      max-height: 400px;
-      width: auto;
+      max-height: 70vh;
+      width: 100%;
+      max-width: 500px;
       border-radius: 20px;
       object-fit: contain;
     }
@@ -113,15 +111,19 @@
     footer {
       background-color: #111;
       color: white;
-      padding: 15px 30px;
+      padding: 20px 30px;
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-wrap: wrap;
-      gap: 20px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      z-index: 5;
+      gap: 25px;
       font-size: 16px;
       border-top: 2px solid red;
-      animation: slideUp 1s ease-out;
+      flex-wrap: wrap;
+      animation: slideUp 1.2s ease-in-out;
     }
 
     footer a {
@@ -137,15 +139,25 @@
       color: red;
     }
 
-    /* Animations */
+    /* Animasi */
     @keyframes fadeInLeft {
-      from { transform: translateX(-50px); opacity: 0; }
+      from { transform: translateX(-40px); opacity: 0; }
       to { transform: translateX(0); opacity: 1; }
     }
 
-    @keyframes fadeInZoom {
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes zoomIn {
       from { transform: scale(0.8); opacity: 0; }
       to { transform: scale(1); opacity: 1; }
+    }
+
+    @keyframes slideDown {
+      from { transform: translateY(-100%); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
 
     @keyframes slideUp {
@@ -153,45 +165,43 @@
       to { transform: translateY(0); opacity: 1; }
     }
 
-    /* Responsiveness */
+    /* RESPONSIVE DESIGN */
     @media (max-width: 768px) {
-      header, footer {
+      header {
         flex-direction: column;
         align-items: flex-start;
-        padding: 15px;
       }
 
       nav {
         margin-top: 10px;
+        display: flex;
+        flex-wrap: wrap;
       }
 
       nav a {
-        margin-left: 0;
-        margin-right: 15px;
+        margin: 10px 10px 0 0;
       }
 
       main {
-        padding: 120px 20px 60px;
         flex-direction: column;
+        align-items: center;
+        padding: 120px 20px 100px;
       }
 
       .intro {
-        margin: 0;
+        margin-left: 0;
         text-align: center;
       }
 
-      .hero-img {
-        justify-content: center;
-      }
-
-      .hero-img img {
-        max-width: 100%;
-        height: auto;
+      .intro h1 {
+        font-size: 28px;
       }
 
       footer {
-        justify-content: center;
-        text-align: center;
+        flex-direction: column;
+        gap: 10px;
+        font-size: 14px;
+        padding: 15px;
       }
     }
   </style>
