--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tentang Andika</title>
   <style>
     * {
@@ -30,6 +30,7 @@
       background-color: #111;
       border-bottom: 2px solid red;
       z-index: 10;
+      animation: slideDown 1s ease-in-out;
     }
 
     .logo {
@@ -65,6 +66,7 @@
       padding: 40px 30px;
       gap: 30px;
       max-width: 1000px;
+      animation: fadeInUp 1.5s ease-in-out;
     }
 
     .about-image img {
@@ -80,6 +82,7 @@
       font-size: 18px;
       line-height: 1.6;
     }
+
     footer {
       background-color: #111;
       color: white;
@@ -94,7 +97,10 @@
       gap: 25px;
       font-size: 16px;
       border-top: 2px solid red;
+      animation: slideUp 1.2s ease-in-out;
+      flex-wrap: wrap;
     }
+
     footer a {
       color: white;
       text-decoration: none;
@@ -106,6 +112,67 @@
 
     footer a:hover {
       color: red;
+    }
+
+    /* Animasi */
+    @keyframes slideDown {
+      from { transform: translateY(-100%); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    @keyframes slideUp {
+      from { transform: translateY(100%); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    @keyframes fadeInUp {
+      from { transform: translateY(30px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    /* RESPONSIVE DESIGN */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        margin-top: 10px;
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      nav a {
+        margin: 10px 10px 0 0;
+      }
+
+      .about-section {
+        padding: 120px 20px 100px;
+      }
+
+      .about-container {
+        flex-direction: column;
+        text-align: center;
+        padding: 30px 20px;
+      }
+
+      .about-image img {
+        width: 150px;
+        height: 150px;
+      }
+
+      .about-text {
+        font-size: 16px;
+        padding-top: 15px;
+      }
+
+      footer {
+        flex-direction: column;
+        gap: 10px;
+        font-size: 14px;
+        padding: 15px;
+      }
     }
   </style>
 </head>
@@ -124,7 +191,7 @@
   <section class="about-section">
     <div class="about-container">
       <div class="about-image">
-        <img src="image/andika.jpg" alt="Foto Andika">
+        <img src="image/andika.jpg" alt="Foto Andika" />
       </div>
       <div class="about-text">
         My name is Andika, a student of SMKN 1 Nglegok majoring in Computer Engineering and Networking. I live in Ds. Sukosewu, RT 02/RW 06, Gandusari District, Blitar Regency.
@@ -135,20 +202,20 @@
       </div>      
     </div>
   </section>
-  <footer>
-  <a href="https://wa.me/6282257006740" target="_blank">
-    <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
-  </a>
-  <a href="mailto:andika23580@gmail.com" target="_blank">
-    <img src="image/Email.png" alt="Email" width="20"> Email
-  </a>
-  <a href="www.linkedin.com/in/andika-58905a28a" target="_blank">
-    <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
-  </a>
-  <a href="https://www.instagram.com/_kaa_aja?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
-    <img src="image/ig.png" alt="Instagram" width="20"> Instagram
-  </a>
-</footer>
 
+  <footer>
+    <a href="https://wa.me/6282257006740" target="_blank">
+      <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
+    </a>
+    <a href="mailto:andika23580@gmail.com" target="_blank">
+      <img src="image/Email.png" alt="Email" width="20"> Email
+    </a>
+    <a href="https://www.linkedin.com/in/andika-58905a28a" target="_blank">
+      <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
+    </a>
+    <a href="https://www.instagram.com/_kaa_aja?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+      <img src="image/ig.png" alt="Instagram" width="20"> Instagram
+    </a>
+  </footer>
 </body>
 </html>
