--- a/experience.html
+++ b/experience.html
@@ -19,6 +19,29 @@
       overflow-x: hidden;
     }
 
+    /* ANIMASI */
+    @keyframes slideDown {
+      from {
+        transform: translateY(-100%);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    @keyframes slideUp {
+      from {
+        transform: translateY(100%);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
     header {
       display: flex;
       justify-content: space-between;
@@ -30,6 +53,7 @@
       background-color: #111;
       border-bottom: 2px solid red;
       z-index: 10;
+      animation: slideDown 1s ease-out;
     }
 
     .logo {
@@ -114,34 +138,36 @@
         left: 15px;
       }
     }
-          footer {
-        background-color: #111;
-        color: white;
-        padding: 20px 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        z-index: 5;
-        gap: 25px;
-        font-size: 16px;
-        border-top: 2px solid red;
-      }
 
-      footer a {
-        color: white;
-        text-decoration: none;
-        transition: 0.3s;
-        display: flex;
-        align-items: center;
-        gap: 8px;
-      }
+    footer {
+      background-color: #111;
+      color: white;
+      padding: 20px 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      z-index: 5;
+      gap: 25px;
+      font-size: 16px;
+      border-top: 2px solid red;
+      animation: slideUp 1s ease-out;
+    }
 
-      footer a:hover {
-        color: red;
-      }
+    footer a {
+      color: white;
+      text-decoration: none;
+      transition: 0.3s;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    footer a:hover {
+      color: red;
+    }
   </style>
 </head>
 <body>
@@ -187,6 +213,7 @@
       </div>
     </div>
   </section>
+
   <footer>
     <a href="https://wa.me/682257006740" target="_blank">
       <img src="image/wa.png" alt="WhatsApp" width="20"> WhatsApp
@@ -194,7 +221,7 @@
     <a href="mailto:andika23580@gmail.com" target="_blank">
       <img src="image/Email.png" alt="Email" width="20"> Email
     </a>
-    <a href="www.linkedin.com/in/andika-58905a28a" target="_blank">
+    <a href="https://www.linkedin.com/in/andika-58905a28a" target="_blank">
       <img src="image/linkedin.png" alt="LinkedIn" width="20"> LinkedIn
     </a>
     <a href="https://www.instagram.com/_kaa_aja?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
